--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>This is body</h1>
     <p>this is faltu</p>
-    <p>gid adfhnaiudjkshnf</p>
+    <p class="fokir">gid adfhnaiudjkshnf</p>
+    <script src="./app.js"></script>
   </body>
 </html>
